# pilatus-aravis

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
pilatus-aravis/: Cargo.toml
pilatus-aravis-rt/: Cargo.toml
pilatus-aravis-rt/src/: buffer.rs  genicam.rs  image_ext.rs  ip.rs  lib.rs  wrapper.rs
pilatus-aravis-rt/src/device/: acquisition.rs  get_image.rs  mod.rs  state.rs
pilatus-aravis/src/: lib.rs
src/: buffer.rs  image_ext.rs  lib.rs  wrapper.rs
src/device/: acquisition.rs  mod.rs  record.rs  state.rs  subscribe.rs
