[workspace]
resolver = "2"

members = [
  "examples/*",
  "pilatus-aravis",
  "pilatus-aravis-rt",
]

#[patch."https://github.com/mineichen/pilatus.git"]
#pilatus =  { path = "../pilatus/pilatus" }
#pilatus-rt =  { path = "../pilatus/pilatus-rt" }
#pilatus-axum =  { path = "../pilatus/pilatus-axum" }
#pilatus-axum-rt =  { path = "../pilatus/pilatus-axum-rt" }
#pilatus-engineering =  { path = "../pilatus/pilatus-engineering" }
#pilatus-engineering-camera-rt = { path = "../pilatus/pilatus-engineering-camera-rt" }