[workspace]
resolver = "2"

members = [
  "examples/*",
  "pilatus-aravis",
  "pilatus-aravis-rt",
]

[workspace.dependencies]
pilatus.git = "https://github.com/mineichen/pilatus.git"
pilatus-axum.git = "https://github.com/mineichen/pilatus.git"
pilatus-axum-rt.git = "https://github.com/mineichen/pilatus.git"
pilatus-engineering-rt = { git = "https://github.com/mineichen/pilatus.git", features = ["axum"]}
pilatus-engineering.git = "https://github.com/mineichen/pilatus.git"
pilatus-rt.git = "https://github.com/mineichen/pilatus.git"

#[patch."https://github.com/mineichen/pilatus.git"]
#pilatus =  { path = "../pilatus/pilatus" }
#pilatus-rt =  { path = "../pilatus/pilatus-rt" }
#pilatus-axum =  { path = "../pilatus/pilatus-axum" }
#pilatus-axum-rt =  { path = "../pilatus/pilatus-axum-rt" }
#pilatus-engineering =  { path = "../pilatus/pilatus-engineering" }
#pilatus-engineering-camera-rt = { path = "../pilatus/pilatus-engineering-camera-rt" }