[package]
name = "pilatus-aravis-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
aravis-sys = "0.11"
aravis = { version = "0.11", features = ["v0_8_31"] }
#aravis = { path = "../../aravis-rs/aravis" }
#aravis-sys = { path = "../../aravis-rs/aravis-sys" }
anyhow = "1"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
minfac = "0.1.0"
pilatus = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = [
    "tokio",
] }
pilatus-engineering = { git = "https://github.com/mineichen/pilatus.git", branch = "main" }
pilatus-aravis = { path = "../pilatus-aravis" }
serde = { "version" = "1", features = ["derive"] }
thiserror = "2"
tokio = { "version" = "1", "features" = ["sync", "macros"] }
tokio-stream = { "version" = "0.1", "features" = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { "version" = "1", "features" = ["sync", "macros", "fs"] }
serde_json = "1"
