[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
minfac = "0.1"
pilatus = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["tokio"] }
pilatus-axum-rt = { git = "https://github.com/mineichen/pilatus.git", branch = "main", features = ["engineering"] }
pilatus-engineering-rt = { git = "https://github.com/mineichen/pilatus.git", branch = "main" }
pilatus-rt = { git = "https://github.com/mineichen/pilatus.git", branch = "main" }
pilatus-aravis-rt = { path = "../.." }
tracing = "0.1"
tokio = { version = "1" }