[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
minfac = "0.1"
pilatus = { workspace = true, features = ["tokio"] }
pilatus-axum-rt.workspace = true
pilatus-engineering-rt = { workspace = true, features = ["axum"]}
pilatus-rt.workspace = true
pilatus-aravis-rt = { path = "../../pilatus-aravis-rt" }
pilatus-aravis = { path = "../../pilatus-aravis" }
tokio = { version = "1" }
tracing = "0.1"